[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-gpu-nim-toolkit"
version = "0.1.0"
description = "A comprehensive toolkit for GPU monitoring and NVIDIA NIM inference with TMAS security scanning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Security Team", email = "security@company.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["nvidia", "gpu", "nim", "monitoring", "inference", "ai", "ml"]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0", 
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
nvidia = [
    "nvidia-ml-py>=12.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
full = [
    "nvidia-ml-py>=12.0.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/nvidia-gpu-nim-toolkit"
Documentation = "https://github.com/yourorg/nvidia-gpu-nim-toolkit#readme"
Repository = "https://github.com/yourorg/nvidia-gpu-nim-toolkit.git"
"Bug Tracker" = "https://github.com/yourorg/nvidia-gpu-nim-toolkit/issues"

[project.scripts]
nvidia-toolkit = "nvidia_toolkit.cli:main"
gpu-monitor = "nvidia_toolkit.cli:gpu_monitor"
nim-client = "nvidia_toolkit.cli:nim_client"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=nvidia_toolkit --cov-report=term-missing"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]